RESOLVED FIXED57134
WKPageLoadAlternateHTMLString doesn't re-spawn a dead WebProcess, but should
https://bugs.webkit.org/show_bug.cgi?id=57134
Summary WKPageLoadAlternateHTMLString doesn't re-spawn a dead WebProcess, but should
Sam Weinig
Reported 2011-03-25 18:07:21 PDT
WKPageLoadAlternateHTMLString doesn't re-spawn a dead WebProcess, but should
Attachments
Patch (8.40 KB, patch)
2011-03-25 18:14 PDT, Sam Weinig
adele: review+
Sam Weinig
Comment 1 2011-03-25 18:14:30 PDT
Sam Weinig
Comment 2 2011-03-25 18:22:44 PDT
Note You need to log in before you can comment on or make changes to this bug.